resources/css/site.css
/* ... */
.btn-ttn:focus,
.btn-ttn.focus {
    box-shadow: 0 0 0 0.2rem rgb(126, 143, 187);
}

.btn-ttn.disabled,
.btn-ttn:disabled {
    color: #fff;
    background-color: #8695be;
    border-color: #8695be;
}

.btn-ttn:not(:disabled):not(.disabled):active,
.btn-ttn:not(:disabled):not(.disabled).active,
.show > .btn-ttn.dropdown-toggle {
    color: #fff;
    background-color: #8695be;
    border-color: #8695be;
}

.btn-ttn:not(:disabled):not(.disabled):active:focus,
.btn-ttn:not(:disabled):not(.disabled).active:focus,
.show > .btn-ttn.dropdown-toggle:focus {
    box-shadow: 0 0 0 0.2rem rgb(119, 138, 184);
}

.footer__info {
    width: 330px;
}

.eden {
    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(100deg)
        brightness(100%) contrast(100%);
}

.card-img-top {
    height: 100% !important;
}

.p-heading {
    font-weight: 500;
}

.p-container .card {
    width: 100%;
}

.p-container--joint figure,
.p-container--single figure {
    margin: 1rem 0 !important;
}

.p-image {
    margin: 0 auto;
    object-fit: cover;
    min-height: 100%;
}

.btn-credit,
.btn-direct {
    margin-top: 16px;
    font-size: 1.15rem;
    padding: 18px 36px;
}

.btn-direct:focus {
    background: #299942;
    color: #fff;
}

@media screen and (min-width: 993px) {
    .btn-credit,
    .btn-direct {
        margin: 0 auto;
        max-width: 85%;
        width: 100%;
    }
}

.home-hero {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    isolation: isolate;
    z-index: 100;
}

.parallax {
    height: 688px;
}

.parallax-home {
    min-height: 0;
    height: 280px;
}

.home-hero .bg-overlay {
    background-image: linear-gradient(
        to top,
        rgba(0, 0, 0, 0.8) 10%,
        transparent
    );
    grid-column: 1 / -1;
    grid-row: 1 / 2;
    z-index: 101;
    display: flex;
}

.home-hero .addon {
    grid-column: 1 / -1;
    grid-row: 1 / 2;
    z-index: 102;
    max-width: 1320px;
    padding: 0 16px 72px 16px;
    margin: 0 auto;
    width: 100%;
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
    color: white;
    gap: 180px;
    line-height: normal;
}

@media (max-width: 768px) {
    .home-hero .addon {
        gap: 20px;
        flex-direction: column;
        align-items: flex-start;
        justify-content: flex-end;
        padding: 0 16px 32px 16px;
    }
}

@media (min-width: 1400px) {
    .container {
        max-width: 1290px;
    }
}

.home-hero .wrapper {
    width: 100%;
    display: flex;
    flex-direction: column;
}

.home-hero .wrapper h1 {
    color: #fff;
    font-size: 44px;
    font-weight: 500;
}

@media screen and (min-width: 768px) {
    .home-hero .wrapper h1 {
        font-size: 80px;
    }
}

.home-hero .wrapper p {
    font-size: 24px;
    font-weight: 500;
}

.home-hero .wrapper p:last-of-type {
    margin-bottom: 0;
}

.home-hero .hero-cta {
    white-space: nowrap;
    font-size: 20px;
    font-weight: 500;
    display: flex;
    padding: 16px;
    justify-content: flex-end;
    align-items: center;
    gap: 4px;
    background: white;
    color: #000;
    border: none;
    border-radius: 4px;
}

.home-hero .hero-cta a {
    color: #000;
}

.container-home-cards {
    padding: 20px 16px 30px 16px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: max-content 1fr;
    grid-gap: 18px;
    grid-auto-columns: 33.3333%;
}

.container-home-card {
    max-width: 650px;
    width: 100%;
}

.container-home-cards h3 {
    grid-row: 1 / 2;
    grid-column: 1 / -1;
    font-size: 24px;
    font-weight: 500;
}

.container-home-cards .row-home {
    grid-row: 2 / 3;
    grid-column: 1 / -1;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
    grid-gap: 10px;
}

.container-home-cards h3 a {
    font-size: 24px;
    font-weight: 500;
    display: inline-block;
}

.container-home-card .card-image {
    display: block;
    position: relative;
    overflow: hidden;
    padding-top: 42.59%;
}

.container-home-card .card-image img {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.acknowledgement-notice {
    position: relative;
    margin-bottom: 2rem;
}

.acknowledgement-notice .wrapper {
    max-width: 840px;
    width: 100%;
    font-weight: 400;
    line-height: 1.5625rem;
    padding-left: 2.56rem;
}

.acknowledgement-notice h2 {
    font-size: 1.25rem;
    font-weight: 500;
    color: #000;
}

.acknowledgement-notice p {
    margin: 0;
}

.acknowledgement-notice::after {
    content: "";
    position: absolute;
    top: 0;
    left: 16px;
    width: 8px;
    height: 100%;
    background: #b50e5e;
    display: block;
}

.acknowledgement-collection-form {
    padding: 1.25rem 1rem 1rem 1rem;
}

.acknowledgement-highlights-form {
    padding: 1.25rem 1rem;
    margin-bottom: 2rem;
}

.acknowledgement-collection-form label[for="collection-query"],
.acknowledgement-highlights-form label[for="highlights-query"] {
    font-size: 1.5rem;
    font-weight: 500;
    margin-bottom: 1rem;
}

.acknowledgement-highlights-form .form-field {
    display: flex;
}

.bg-white-subscribe {
    padding: 28px 16px 24px;
}

.container-subscribre {
    max-width: 1290px;
    background-color: #b50e5e !important;
    border-radius: 4px;
    padding: 20px;
    color: white;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    margin-bottom: 24px;
}

.container-subscribre .wrapper h5 {
    font-size: 24px;
    font-weight: 500;
}

.container-subscribre .wrapper p {
    font-size: 18px;
    font-weight: 400;
    margin: 0;
}

.container-subscribre .subscribre-button {
    margin-top: 8px;
    margin-right: auto;
    padding: 16px;
    background: black;
    display: inline-flex;
    align-items: center;
    color: #fff;
    border-radius: 4px;
    font-size: 20px;
    font-weight: 500;
    white-space: nowrap;
}
/* ... */

